--- a/src/index.css
+++ b/src/index.css
@@ -130,8 +130,6 @@
 
 :root {
   font-family: Rubik, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
   color-scheme: light;
   color: #6b7280;
@@ -142,13 +140,20 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+body {
+  width: 100vw;
+  height: 100dvh;
+  max-width: 100vw;
+  max-height: 100dvh;
 
   overflow-x: hidden;
   scrollbar-gutter: stable both-edges;
   overflow-y: auto;
 }
 
-body {
-  width: 100vw;
-  height: 100dvh;
+#root {
+  display: flex;
+  flex-direction: row;
 }
