--- a/src/index.css
+++ b/src/index.css
@@ -157,3 +157,21 @@ body {
   display: flex;
   flex-direction: row;
 }
+
+.show-scrollbar::-webkit-scrollbar {
+  display: block;
+  background-color: transparent;
+  width: 4px;
+}
+
+.show-scrollbar::-webkit-scrollbar-track {
+  background-color: #fff;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.show-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #babac0;
+  border-radius: 20px;
+  border: 0;
+}
